# ATM-Application

./: .dockerignore  .env.developement  .flake8  .gitignore  Dockerfile  README.md  actions.txt  dev-requirements.txt  docker-compose.yml  entrypoint.sh  gitMsg.txt  init_db.py  main.py  pyproject.toml  requirements.txt  setup.cfg  tmp
.github/workflows/: ci.yml
Database/: schema.sql
app/: Dockerfile  init_db.py  main.py  requirements.txt
app/database/: schema.sql
app/scripts/atm/: atm.py
app/scripts/config/: config.py  utils.py
app/scripts/constants/: constants.py
app/scripts/menu/: __init__.py  menu.py
devtools/: .gitignore  block_ender_autofix.py  block_ender_formatter.py  dev-requirements.txt
devtools/flake8_plugins/: block_ender.py
scripts/Atm/: atm.py
scripts/Pincode/: pincode.py
scripts/Sql/: schema.sql
src/: .gitignore  atm.py  main.py
src/app/: .dockerignore  entrypoint.sh  init_db.py  main.py
src/app/scripts/atm/: atm.py
src/app/scripts/config/: config.py  utils.py
src/app/scripts/constants/: constants.py
src/app/scripts/menu/: __init__.py  menu.py
src/app/scripts/pincode/: pincode.py
src/atm_machine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_atm.py  test_pincode.py
