[metadata]
name = atm-machine
version = 0.1.0
description = \
    Interactive, console-based ATM application with secure Docker-Compose setup, \
    MySQL integration, and user-friendly CLI menu for deposits, withdrawals, \
    PIN management, and receipt generation. 
author = Alex Beigel
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[flake8]
max-line-length = 100

[flake8:local-plugins]
paths = 
    = devtools
extension =
    CST = flake8_plugins.block_ender:BlockEnder